--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,3 +1,3 @@
 <div style="text-align: center;">
-  <img src="{{ .Get 0 }}" alt="{{ .Get 1 | default "" }}" style="max-width: {{ .Get 2 | default "500px" }}; width: 100%;">
+  <img src="{{ .Page.Permalink }}{{ .Get 0 }}" alt="{{ .Get 1 | default "" }}" style="max-width: {{ .Get 2 | default "500px" }}; width: 100%;">
 </div>
