add cloudflare extended_footer

--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,1 +1,2 @@
 <script defer src="/js/external-links.js"></script>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "53f0a5137b9e485c9f82173593fcf243"}'></script><!-- End Cloudflare Web Analytics -->
